# STM32N6_Smart_Presence_Wakeup

./: CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf
boards/: stm32n6570_dk.conf  stm32n6570_dk.overlay
drivers/sensor/vl53l5cx/: platform.c  platform.h
dts/bindings/sensor/: st,vl53l5cx.yaml
src/: main.c
